--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>exec-maven-plugin</artifactId>
-  <version>3.6.3</version>
+  <version>3.6.4-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Exec Maven Plugin</name>
@@ -137,7 +137,7 @@
     <slf4j.version>1.7.36</slf4j.version>
     <asm.version>9.9.1</asm.version>
     <invoker.parallelThreads>1C</invoker.parallelThreads>
-    <project.build.outputTimestamp>2025-12-21T20:59:18Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-12-21T21:00:48Z</project.build.outputTimestamp>
     <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
     <mojo.java.target>8</mojo.java.target>
   </properties>
